[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Adam Owada <adamowada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.10.1"
jupyter = "^1.0.0"
lab = "^6.0"
pandas = "^1.0.5"
jupyterlab = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
